[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bhe-alertbot"
version = "0.1.0"
description = "BloodHound Enterprise Attack Path alerting CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
alertbot = "alertbot.cli:main"

[tool.setuptools.packages.find]
include = ["alertbot*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
